apollo-router/tests/integration/snapshots/integration_tests__integration__postgres__entity_cache_basic-3.snap
---
source: apollo-router/tests/integration/postgres.rs
expression: v
---
{
  "reviews": [
    {
      "body": "I can sit on it"
    }
  ]
}
