apollo-router/tests/integration/snapshots/integration_tests__integration__postgres__entity_cache_basic.snap
---
source: apollo-router/tests/integration/postgres.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can sit on it2"
          }
        ]
      },
      {
        "name": "plate",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can sit on it2"
          },
          {
            "body": "I can sit on it3"
          }
        ]
      }
    ]
  },
  "extensions": {
    "apolloCacheDebugging": {
      "version": "1.0",
      "data": [
        {
          "key": "version:1.0:subgraph:products:type:Query:hash:bf44683f0c222652b509d6efb8f324610c8671181de540a96a5016bd71daa7cc:data:2ed9d19b09666d20e2ae91c648077f8ed1528b0ebc54070f88514286539a6017",
          "invalidationKeys": [],
          "kind": {
            "rootFields": [
              "topProducts"
            ]
          },
          "subgraphName": "products",
          "subgraphRequest": {
            "query": "{ topProducts { __typename upc name } }"
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 60,
            "public": true
          },
          "data": {
            "data": {
              "topProducts": [
                {
                  "__typename": "Product",
                  "upc": "1",
                  "name": "chair"
                },
                {
                  "__typename": "Product",
                  "upc": "2",
                  "name": "table"
                },
                {
                  "__typename": "Product",
                  "upc": "3",
                  "name": "plate"
                }
              ]
            }
          }
        },
        {
          "key": "version:1.0:subgraph:reviews:type:Product:entity:052fa800fa760b2ac78669a5b0b90f512158eddab8d01eabb4e65b286ff09ecd:representation::hash:06a24c8b3861c95f53d224071ee9627ee81b4826d23bc3de69bdc0031edde6ed:data:2ed9d19b09666d20e2ae91c648077f8ed1528b0ebc54070f88514286539a6017",
          "invalidationKeys": [],
          "kind": {
            "typename": "Product",
            "entityKey": {
              "upc": "1"
            }
          },
          "subgraphName": "reviews",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }",
            "variables": {
              "representations": [
                {
                  "upc": "1",
                  "__typename": "Product"
                },
                {
                  "upc": "2",
                  "__typename": "Product"
                },
                {
                  "upc": "3",
                  "__typename": "Product"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 10,
            "public": true
          },
          "data": {
            "data": {
              "reviews": [
                {
                  "body": "I can sit on it"
                }
              ]
            }
          }
        },
        {
          "key": "version:1.0:subgraph:reviews:type:Product:entity:2c6d8b73241e1bc016ddc35bff648f693687d3181d18815493a32f69614f6507:representation::hash:06a24c8b3861c95f53d224071ee9627ee81b4826d23bc3de69bdc0031edde6ed:data:2ed9d19b09666d20e2ae91c648077f8ed1528b0ebc54070f88514286539a6017",
          "invalidationKeys": [],
          "kind": {
            "typename": "Product",
            "entityKey": {
              "upc": "2"
            }
          },
          "subgraphName": "reviews",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }",
            "variables": {
              "representations": [
                {
                  "upc": "1",
                  "__typename": "Product"
                },
                {
                  "upc": "2",
                  "__typename": "Product"
                },
                {
                  "upc": "3",
                  "__typename": "Product"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 10,
            "public": true
          },
          "data": {
            "data": {
              "reviews": [
                {
                  "body": "I can sit on it"
                },
                {
                  "body": "I can sit on it2"
                }
              ]
            }
          }
        },
        {
          "key": "version:1.0:subgraph:reviews:type:Product:entity:cf4952a1e511b1bf2561a6193b4cdfc95f265a79e5cae4fd3e46fd9e75bc512f:representation::hash:06a24c8b3861c95f53d224071ee9627ee81b4826d23bc3de69bdc0031edde6ed:data:2ed9d19b09666d20e2ae91c648077f8ed1528b0ebc54070f88514286539a6017",
          "invalidationKeys": [],
          "kind": {
            "typename": "Product",
            "entityKey": {
              "upc": "3"
            }
          },
          "subgraphName": "reviews",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on Product { reviews { body } } } }",
            "variables": {
              "representations": [
                {
                  "upc": "1",
                  "__typename": "Product"
                },
                {
                  "upc": "2",
                  "__typename": "Product"
                },
                {
                  "upc": "3",
                  "__typename": "Product"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 10,
            "public": true
          },
          "data": {
            "data": {
              "reviews": [
                {
                  "body": "I can sit on it"
                },
                {
                  "body": "I can sit on it2"
                },
                {
                  "body": "I can sit on it3"
                }
              ]
            }
          }
        }
      ]
    }
  }
}
