apollo-router/tests/integration/snapshots/integration_tests__integration__postgres__entity_cache_with_nested_field_set-4.snap
---
source: apollo-router/tests/integration/postgres.rs
expression: response
---
{
  "data": {
    "allProducts": [
      {
        "name": "Test",
        "createdBy": {
          "name": "test",
          "country": {
            "a": "France"
          }
        }
      }
    ]
  }
}
